[package]
name = "lapin-actix-rt"
version = "0.1.0"
authors = ["Augusto César Dias<augusto.c.dias@gmail.com>"]
description = "An Actix Runtime executor for Lapin"
repository = "https://github.com/augustocdias/lapin-actix-rt"
edition = "2018"
categories = ["database"]
license = "MIT"
keywords = ["amqp", "rabbitmq", "mio", "futures", "actix"]

[dependencies]
actix-rt = "1.1"
executor-trait = "2.0"
async-trait = "0.1"
lapin = { version = "1.6", default-features = false }
